adding mobile menu

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,7 +13,8 @@
     "phone": "call us",
     "email": "email us",
     "facebook": "find us on facebook",
-    "language": "current language"
+    "language": "current language",
+    "menu": "menu"
   },
   "hero": {
     "title": "Caring for your Furry Friends",
